--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
 }
 
 def lifeCycleExtensionsVersion = '1.1.1'
